<resources>
    <string name="app_name">Attendance Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="adm_no">Admission Number</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="pwd">Password</string>
    <string name="timetable">View Timetable</string>
    <string name="profile">View My prophile</string>
    <string name="submitAttendance">Submit Attendance</string>
    <string name="instruction">Place your registered fingerprint on the scanner to submit attendance</string>
    <string name="submit">SUBMIT</string>
    <string name="unit_prompt">Select The unit you are attending</string>
    <string-array name="uci">
        <item>Select the code for  Unit that you are attending it\'s Lesson</item>
        <item>Uci 101</item>
        <item>Uci 102</item>
        <item>Uci 103</item>
        <item>Uci 104</item>
        <item>Uci 201</item>
        <item>Uci 202</item>
        <item>Uci 203</item>
        <item>Uci 204</item>
        <item>Uci 301</item>
        <item>Uci 302</item>
        <item>Uci 303</item>
        <item>Uci 304</item>
        <item>Uci 401</item>
        <item>Uci 402</item>
        <item>Uci 403</item>
        <item>Uci 404</item>
    </string-array>
    <string name="course_prompt">Select your course</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="date_time">DATE/TIME</string>
    <string name="fri">FRI</string>
    <string name="mon">MON</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="thur">THUR</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="load">Load</string>
    <string-array name="programs">
        <item>Select the Program that you are taking</item>
        <item>IT</item>
        <item>Computer Science</item>
        <item>Sociology</item>
        <item>Business IT</item>
    </string-array>
</resources>
