<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.otema.tosby.attendancemanager.Timetable"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/date"
        android:layout_alignParentStart="true"
        android:text="@string/date_time"
        android:textSize="16sp"
        android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_1"
            android:id="@+id/t1"
            android:layout_toEndOf="@+id/date"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_2"
            android:id="@+id/t2"
            android:layout_toEndOf="@+id/t1"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_3"
            android:id="@+id/t3"
            android:layout_toEndOf="@+id/t2"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_4"
            android:id="@+id/t4"
            android:layout_toEndOf="@+id/t3"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_5"
            android:id="@+id/t5"
            android:layout_toEndOf="@+id/t4"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_6"
            android:id="@+id/t6"
            android:layout_toEndOf="@+id/t5"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_7"
            android:id="@+id/t7"
            android:layout_toEndOf="@+id/t6"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_8"
            android:id="@+id/t8"
            android:layout_toEndOf="@+id/t7"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_9"
            android:id="@+id/t9"
            android:layout_toEndOf="@+id/t8"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>
        </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/mon"
                    android:id="@+id/mon"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/tue"
                    android:id="@+id/tue"
                    android:layout_below="@+id/mon"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/full"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/wed"
                    android:id="@+id/wed"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tue"
                    android:layout_marginTop="@dimen/full"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/thur"
                    android:id="@+id/thur"
                    android:layout_below="@+id/wed"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/full"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/fri"
                    android:id="@+id/fri"
                    android:layout_below="@+id/thur"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/full"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/sat"
                    android:id="@+id/sat"
                    android:layout_below="@+id/fri"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/full"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/sun"
                    android:id="@+id/sun"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/sat"
                    android:layout_marginTop="@dimen/full"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        <TextView
            android:id="@+id/ContentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/text_bg" />
                </RelativeLayout>
</ScrollView>


</RelativeLayout>
