<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.otema.tosby.attendancemanager.Attendance"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal">
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progspinner"
        android:entries="@array/programs"
        android:prompt="@string/course_prompt">

    </Spinner>
   <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/unitspinner"
    android:entries="@array/uci"
    android:prompt="@string/unit_prompt"
       android:layout_marginTop="16dp"
       android:layout_below="@+id/progspinner">

</Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="74dp"
                android:layout_below="@+id/unitspinner"
                android:layout_alignParentStart="true"
                android:id="@+id/scandesc"/>

            <TextView
                android:id="@+id/fingerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scandesc"
                android:layout_marginTop="74dp"
                android:layout_marginStart="74dp"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/authBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="19dp" />

</RelativeLayout>
